--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,54 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* width: 100%;
+  height: 100%; */
 }
-
+/* #root {
+  width: 100%;
+  height: 100%;
+}
+.App {
+  width: 100%;
+  height: 100%;
+} */
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.small-container {
+  width: 450px;
+  height: 550px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid 	#cadeef;
+  padding: 25px 40px;
+  border-radius: 10px;
+  margin: auto;
+  /* background-color: black; */
+}
+
+.section-title {
+  text-align: right;
+  font-weight: 900;
+  padding: 25px 25px;
+}
+.login-form {
+  max-width: 300px;
+}
+.login-form-forgot {
+  float: right;
+}
+.login-form-button {
+  width: 100%;
+}
+
+.logo {
+  width: 100px;
+  height: 100px;
+  border-radius: 100px;
+
 }
