--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
+/* colors: E8F9FD, 79DAE8, 0AA1DD, 2155CD */
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Vazirmatn, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* width: 100%;
@@ -37,7 +36,8 @@ code {
 
 .section-title {
   text-align: right;
-  font-weight: 900;
+  font-weight: 700;
+  font-size: 20px;
   padding: 25px 25px;
 }
 .login-form {
