--- a/src/login/style/EnterPhone.css
+++ b/src/login/style/EnterPhone.css
@@ -1,3 +1,4 @@
+
 .small-box {
   width: 450px;
   /* height: 550px; */
@@ -9,6 +10,7 @@
   padding: 25px 40px;
   border-radius: 10px;
   margin: auto;
+  text-align: center;
   /* background-color: black; */
 }
 
